--- a/smdfyp/src/main/res/values/strings.xml
+++ b/smdfyp/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">SMD</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 
 </resources>
